arrumando nav bar, comecando body

--- a/src/index.html
+++ b/src/index.html
@@ -8,32 +8,34 @@
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Desafio</title>
+    <title>Teste Page</title>
 </head>
 
 <body>
     <header id="navbar">
-        <div class="container-sm">
+        <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#">Logo</a>
-                olá, anderson
-
+                <img src="../src/imagens/logo.png" alt="logo">
+                <div class="info-logo">
+                    <b><span>Olá, Anderson</span></b><br>
+                    <p>CPF: 056.490.***</p>
+                </div>
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <i class="material-icons">home</i>
-                        <a class="nav-link" href="#">Início</a>
+                    <li class=" nav-item">
+                        <i class=" material-icons">home</i>
+                        <a class="nav-link stretched-link" href=" https://www.google.com">Início</a>
                     </li>
                     <li class="nav-item">
                         <i class="material-icons">favorite</i>
-                        <a class="nav-link" href="#">Saude Financeira</a>
+                        <a class="nav-link stretched-link" href=" https://www.google.com">Saúde Financeira</a>
                     </li>
                     <li class="nav-item">
                         <i class="material-icons">pageview</i>
-                        <a class="nav-link" href="#">Meu CPF</a>
+                        <a class="nav-link stretched-link" href=" https://www.google.com">Meu CPF</a>
                     </li>
                     <li class="nav-item">
                         <i class="material-icons">border_all</i>
-                        <a class="nav-link" href="#">Soluções</a>
+                        <a class="nav-link stretched-link" href=" https://www.google.com">Soluções</a>
                     </li>
                     <li class="nav-item dropdown">
                         <i class="material-icons">account_circle</i>
@@ -55,7 +57,17 @@
 
     <section id="corpo">
         <div class="container container-corpo">
-            <h5>Explore sua vida Financeira</h5>
+            <strong>
+                <h5>Explore sua vida Financeira</h5>
+            </strong>
+            <div class="card">
+                <div class="card-body">
+                    <img src="../src/imagens/img-score.png" width="130px" height="80px" alt="score">
+                    <a href="https://www.google.com" class=" link stretched-link">Seu Score está bom</a>
+
+                </div>
+                <b><span>Entenda seu Serasa Score </span></b>
+            </div>
         </div>
     </section>
 
