novos cards, precisa arrumar o flex geral

--- a/src/index.html
+++ b/src/index.html
@@ -56,19 +56,48 @@
     </header>
 
     <section id="corpo">
-        <div class="container container-corpo">
+        <div class="container">
             <strong>
                 <h5>Explore sua vida Financeira</h5>
             </strong>
-            <div class="card">
+        </div>
+        <div id="score" class="container flex-consulta-score">
+            <div class="card card-score">
                 <div class="card-body">
                     <img src="../src/imagens/img-score.png" width="130px" height="80px" alt="score">
                     <a href="https://www.google.com" class=" link stretched-link">Seu Score está bom</a>
-
                 </div>
                 <b><span>Entenda seu Serasa Score </span></b>
             </div>
+
+            <div class="card card-consultas">
+                <div class="card-body">
+                    <strong>
+                        <p>Monitoramento de consultas, dívidas e Serasa Score</p>
+                    </strong>
+                </div>
+
+            </div>
         </div>
+
+        <div id="nomeLimpo" class="container flex-nomeLimpo-receita">
+            <div class="card card-nomeLimpo">
+                <div class="card-body">
+                    <strong>
+                        <p>Seu Nome está limpo</p>
+                    </strong>
+                </div>
+            </div>
+
+            <div class="card card-situacaoReceita">
+                <div class="card-body">
+                    <strong>
+                        <p>Sua Situação na Receita</p>
+                    </strong>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
