--- a/src/index.html
+++ b/src/index.html
@@ -56,9 +56,9 @@
     </header>
 
     <section id="corpo">
-        <div class="container">
+        <div class="container titulo">
             <strong>
-                <h5>Explore sua vida Financeira</h5>
+                <p>Explore sua vida Financeira</p>
             </strong>
         </div>
 
@@ -108,9 +108,78 @@
                     </div>
                 </div>
             </div>
+
+            <div class="titulo">
+                <strong>
+                    <p>Soluções</p>
+                </strong>
+            </div>
+            <div class="row ">
+                <div class="col-12 col-md-6">
+                    <div class="card card-solucoes">
+                        <div class="card-body">
+                            <p>Solucionar Empréstimo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-12 col-md-6">
+                    <div class="card card-solucoes">
+                        <div class="card-body">
+                            <p>Solicitar cartão de crédito</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row solucoes-item">
+                <div class="col-12 col-md-6">
+                    <div class="card card-solucoes">
+                        <div class="card-body">
+                            <p>Consultar CPF de terceiros</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row solucoes-item">
+                <div class="col-12 col-md-6">
+                    <div class="card card-solucoes">
+                        <div class="card-body">
+                            <p>Acessar cadastro positivo</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="solucoes" class="row">
+                <div class="col-12 col-md-6">
+                    <div class="card card-solucoes">
+                        <div class="card-body">
+                            <p>Ver todas as Soluções</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
+    <footer>
+        <div class="container footer-item">
+            <p> Info</p>
+            <p>social</p>
+        </div>
+        <hr>
+        <div class="container footer-item">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro molestiae doloribus dolores sit error
+                praesentium aperiam, consequatur veniam laborum dicta fugit in voluptate vitae, dolor consectetur
+                dolorem tempore ipsam ab?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, quo odit iure excepturi aut fuga nisi
+                deleniti, adipisci neque at obcaecati quidem quia cupiditate officiis necessitatibus repellat molestiae
+                libero dolorem!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt perspiciatis quia voluptatem rerum
+                numquam deleniti, labore rem quo ratione sequi cupiditate sit maiores eveniet nulla harum nesciunt porro
+                aliquam cumque!</p>
+        </div>
+    </footer>/
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
