--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Teste Page</title>
 </head>
 
@@ -55,141 +55,172 @@
         </div>
     </header>
 
-    <section id="corpo">
-        <div class="container titulo">
-            <strong>
-                <p>Explore sua vida Financeira</p>
-            </strong>
-        </div>
+    <style>
+        .top-buffer {
+            margin-top: 20px;
+        }
+    </style>
+    </head>
 
-        <div class="container">
+    <body>
+        <section class="container">
             <div class="row">
-                <div class="col-12 col-md-6">
-                    <div id="score">
-                        <div class="card card-score ">
-                            <div class="card-body">
-                                <img src="../src/imagens/img-score.png" width="130px" height="80px" alt="score">
-                                <a href="https://www.google.com" class=" link stretched-link">Seu Score está bom</a>
+                <div class="col-12 col-md-8">
+                    <div class="row">
+                        <div class="col-12 top-buffer">
+                            <h1>Explore a sua vida financeira</h1>
+                        </div>
+                        <div class="col-12 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
                             </div>
-                            <b><span>Entenda seu Serasa Score </span></b>
+                        </div>
+                        <div class="col-12 col-md-6 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-md-6 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-4">
+                    <div class="row">
+                        <div class="col-12 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title COL-MD-4</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-8">
+                    <div class="row">
+                        <div class="col-12 top-buffer">
+                            <h1>Segundo texto</h1>
+                        </div>
+                        <div class="col-12 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 top-buffer">
+                            <div class="card">
+                                <div class="card-body">
+                                    <h5 class="card-title">Card title</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <p class="card-text">Some quick example text to build on the card title and make up
+                                        the bulk of the card's content.</p>
+                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link">Another link</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-                <div class="col">
-                    <div class="card card-consultas">
-                        <div class="card-body">
-                            <strong>
-                                <p>Monitoramento de consultas, dívidas e Serasa Score</p>
-                            </strong>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <footer>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="row">
+                                    <div class="col-6">
+                                        blabalbal
+                                    </div>
+                                    <div class="col-6">
+                                        blalalala
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
 
-            <div id="nome-receita" class="row">
-                <div class="col-12 col-md-3">
-                    <div class="card card-nomeLimpo">
-                        <div class="card-body">
-                            <strong>
-                                <p>Seu Nome está limpo</p>
-                            </strong>
+                            </div>
+                            <div class="col-4">
+                                <ul>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                    <li><a href=""></a></li>
+                                </ul>
+                            </div>
                         </div>
-                    </div>
-                </div>
 
-                <div class="col">
-                    <div class="card card-situacaoReceita ">
-                        <div class="card-body">
-                            <strong>
-                                <p>Sua Situação na Receita</p>
-                            </strong>
-                        </div>
                     </div>
                 </div>
             </div>
+            <hr>
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, sequi dolore. Voluptas,
+                            officia. Quo ipsam odio laborum sint dolore ad, dicta libero, accusamus, quidem provident
+                            fugiat quis itaque autem quisquam!</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, sequi dolore. Voluptas,
+                            officia. Quo ipsam odio laborum sint dolore ad, dicta libero, accusamus, quidem provident
+                            fugiat quis itaque autem quisquam!</p>
+                    </div>
+                    <div class="col-12">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, sequi dolore. Voluptas,
+                            officia. Quo ipsam odio laborum sint dolore ad, dicta libero, accusamus, quidem provident
+                            fugiat quis itaque autem quisquam!</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
 
-            <div class="titulo">
-                <strong>
-                    <p>Soluções</p>
-                </strong>
-            </div>
-            <div class="row ">
-                <div class="col-12 col-md-6">
-                    <div class="card card-solucoes">
-                        <div class="card-body">
-                            <p>Solucionar Empréstimo</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row ">
-                <div class="col-12 col-md-6">
-                    <div class="card card-solucoes">
-                        <div class="card-body">
-                            <p>Solicitar cartão de crédito</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row solucoes-item">
-                <div class="col-12 col-md-6">
-                    <div class="card card-solucoes">
-                        <div class="card-body">
-                            <p>Consultar CPF de terceiros</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row solucoes-item">
-                <div class="col-12 col-md-6">
-                    <div class="card card-solucoes">
-                        <div class="card-body">
-                            <p>Acessar cadastro positivo</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div id="solucoes" class="row">
-                <div class="col-12 col-md-6">
-                    <div class="card card-solucoes">
-                        <div class="card-body">
-                            <p>Ver todas as Soluções</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <footer>
-        <div class="container footer-item">
-            <p> Info</p>
-            <p>social</p>
-        </div>
-        <hr>
-        <div class="container footer-item">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro molestiae doloribus dolores sit error
-                praesentium aperiam, consequatur veniam laborum dicta fugit in voluptate vitae, dolor consectetur
-                dolorem tempore ipsam ab?</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, quo odit iure excepturi aut fuga nisi
-                deleniti, adipisci neque at obcaecati quidem quia cupiditate officiis necessitatibus repellat molestiae
-                libero dolorem!</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt perspiciatis quia voluptatem rerum
-                numquam deleniti, labore rem quo ratione sequi cupiditate sit maiores eveniet nulla harum nesciunt porro
-                aliquam cumque!</p>
-        </div>
-    </footer>/
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
-</body>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+            integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+            integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+            crossorigin="anonymous"></script>
+    </body>
 
 </html>
