--- a/src/index.html
+++ b/src/index.html
@@ -7,102 +7,98 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>Teste Page</title>
 </head>
 
 <body>
-    <header id="navbar">
+    <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-light">
-                <img src="../src/imagens/logo.png" alt="logo">
-                <div class="info-logo">
-                    <b><span>Olá, Anderson</span></b><br>
-                    <p>CPF: 056.490.***</p>
-                </div>
-                <ul class="navbar-nav ml-auto">
-                    <li class=" nav-item">
-                        <i class=" material-icons">home</i>
-                        <a class="nav-link stretched-link" href=" https://www.google.com">Início</a>
-                    </li>
-                    <li class="nav-item">
-                        <i class="material-icons">favorite</i>
-                        <a class="nav-link stretched-link" href=" https://www.google.com">Saúde Financeira</a>
-                    </li>
-                    <li class="nav-item">
-                        <i class="material-icons">pageview</i>
-                        <a class="nav-link stretched-link" href=" https://www.google.com">Meu CPF</a>
-                    </li>
-                    <li class="nav-item">
-                        <i class="material-icons">border_all</i>
-                        <a class="nav-link stretched-link" href=" https://www.google.com">Soluções</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <i class="material-icons">account_circle</i>
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+            <div class="row">
+                <div class="col-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="#">Navbar</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item ">
+                                    <i class=" material-icons">home</i>
+                                    <a class="nav-link" href="https://www.google.com">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <i class="material-icons">favorite</i>
+                                    <a class="nav-link" href="#">Favoritos</a>
+                                </li>
+                                <li class="nav-item">
+                                    <i class="material-icons">pageview</i>
+                                    <a class="nav-link" href="#">Busca</a>
+                                </li>
+                                <li class="nav-item">
+                                    <i class="material-icons">border_all</i>
+                                    <a class="nav-link" href="#">Sobre</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Dropdown link
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                    </li>
-                </ul>
-            </nav>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
-
-    <style>
-        .top-buffer {
-            margin-top: 20px;
-        }
-    </style>
-    </head>
 
     <body>
         <section class="container">
             <div class="row">
                 <div class="col-12 col-md-8">
                     <div class="row">
-                        <div class="col-12 top-buffer">
-                            <h1>Explore a sua vida financeira</h1>
+                        <div class="col-12 top-buffer titulo">
+                            <p>Explore a sua vida</p>
                         </div>
                         <div class="col-12 top-buffer">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <h5 class="card-title">Card title .col-12 .col-md-8</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle .col-12</h6>
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="https://www.google.com" class="card-link stretched-link">Card link</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 top-buffer">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Card title .col-12 .col-md-6 </h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="#" class="card-link stretched-link">Card link</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 top-buffer">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
+                                    <h5 class="card-title">Card title .col-12 .col-md-6</h5>
                                     <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
-                                    <a href="#" class="card-link">Card link</a>
-                                    <a href="#" class="card-link">Another link</a>
+                                    <a href="#" class="card-link stretched-link">Card link</a>
                                 </div>
                             </div>
                         </div>
@@ -113,11 +109,11 @@
                         <div class="col-12 top-buffer">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title COL-MD-4</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <h5 class="card-title">Col-12 COL-MD-4</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle .col-12</h6>
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
-                                    <a href="#" class="card-link">Card link</a>
+                                    <a href="#" class="card-link stretched-link">Card link</a>
                                     <a href="#" class="card-link">Another link</a>
                                 </div>
                             </div>
@@ -126,14 +122,14 @@
                 </div>
                 <div class="col-12 col-md-8">
                     <div class="row">
-                        <div class="col-12 top-buffer">
-                            <h1>Segundo texto</h1>
+                        <div class="col-12 top-buffer titulo">
+                            <p>Segundo texto</p>
                         </div>
                         <div class="col-12 top-buffer">
                             <div class="card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                    <h5 class="card-title">Card .col-12 .col-md-8</h5>
+                                    <h6 class="card-subtitle mb-2 text-muted">.col-12</h6>
                                     <p class="card-text">Some quick example text to build on the card title and make up
                                         the bulk of the card's content.</p>
                                     <a href="#" class="card-link">Card link</a>
@@ -173,20 +169,18 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-4">
-
+                            <div class="col-4 ">
+                                dropdown
                             </div>
                             <div class="col-4">
-                                <ul>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                    <li><a href=""></a></li>
-                                </ul>
+                                <div id="social-media" class="social-media">
+                                    <ul>
+                                        <li><a href="#">Social</a></li>
+                                        <li><a href="#">Social</a></li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
